# AdvancedMachineLearning

./: .gitignore  check_setup.py  pyproject.toml  run_pipeline.py
conf/: config.yaml
conf/dataset/: tribert_filtered.yaml  tribert_filtered_modified_boundaries.yaml
conf/model/: deberta_crf.yaml
scripts/: filter_tribert.py  generate_labels.py  visualize_samples.py
src/data/: dataset.py
src/models/: architecture.py
src/training/: trainer.py
